<resources>
    <string name="app_name">WorkplaceApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cafeteria">Cafeteria</string>
    <string name="payment">Payment</string>
    <string name="holiday">Holiday</string>
    <string name="profile">Profile</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="registration_id">Registration ID:</string>
    <string name="tax_id">Tax ID:</string>
    <string name="social_security_id">Social Security ID:</string>
    <string name="id">ID:</string>
</resources>