<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textAllCaps="true"
            android:textSize="20sp" />

    <TextView
            android:id="@+id/tvId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="#000000"
            android:textSize="34sp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_security_id"
            android:textAllCaps="true"
            android:textSize="20sp" />

    <TextView
            android:id="@+id/tvSSN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="#000000"
            android:textSize="34sp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax_id"
            android:textAllCaps="true"
            android:textSize="20sp" />

    <TextView
            android:id="@+id/tvTaxId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="#000000"
            android:textSize="34sp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_id"
            android:textAllCaps="true"
            android:textSize="20sp" />

    <TextView
            android:id="@+id/tvRegistrationId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="#000000"
            android:textSize="34sp" />

</LinearLayout>